--- a/waifu.css
+++ b/waifu.css
@@ -30,7 +30,7 @@
 	position: fixed;
 	transform: translateY(3px);
 	transition: transform .3s ease-in-out, bottom 3s ease-in-out;
-	z-index: 1;
+	z-index: 100000;
 }
 
 #waifu:hover {
@@ -38,23 +38,7 @@
 }
 
 #waifu-tips {
-	animation: shake 50s ease-in-out 5s infinite;
-	background-color: rgba(236, 217, 188, .5);
-	border: 1px solid rgba(224, 186, 140, .62);
-	border-radius: 12px;
-	box-shadow: 0 3px 15px 2px rgba(191, 158, 118, .2);
-	font-size: 14px;
-	line-height: 24px;
-	margin: -30px 20px;
-	min-height: 70px;
-	opacity: 0;
-	overflow: hidden;
-	padding: 5px 10px;
-	position: absolute;
-	text-overflow: ellipsis;
-	transition: opacity 1s;
-	width: 250px;
-	word-break: break-all;
+	display:none;
 }
 
 #waifu-tips.waifu-tips-active {
